# InterviewOS

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
backend/: README.md  alembic.ini  pyproject.toml  requirements-dev.txt  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: __init__.py  health.py
backend/app/core/: __init__.py  config.py  exceptions.py  logging.py
backend/app/db/: __init__.py  base.py  session.py
backend/app/dependencies/: __init__.py  common.py  db.py
backend/app/middleware/: __init__.py  exception_handler.py  request_id.py  security_headers.py
backend/app/models/: __init__.py  activity_log.py  answer.py  enums.py  feedback.py  group_discussion.py  interview_round.py  interview_session.py  job_description.py  mixins.py  participant.py  question.py  report.py  resume.py  user.py
backend/app/repositories/: __init__.py  base.py
backend/app/schemas/: __init__.py  health.py
backend/app/services/: __init__.py
backend/app/tasks/: __init__.py
backend/app/utils/: __init__.py
backend/tests/: conftest.py  test_health.py  test_health_ready.py  test_models.py
docs/architecture/: 00-roadmap.md  ADR-0001-monorepo-layout.md  (+4 more)
frontend/: README.md  eslint.config.mjs  next.config.mjs  package.json  tailwind.config.ts  tsconfig.json  vitest.config.ts
(+18 files in other folders)
